packages/next-swc/crates/next-dev-tests/tests/integration/next/error/ssr/input/app/layout.tsx
export default function RootLayout({ children }: { children: any }) {
  return (
    <html>
      <body>
        <h1>RootLayout</h1>
        {children}
      </body>
    </html>
  )
}
